Changed from html to md with jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
-name: Torie Barrett's Github Pages Site
+title: Victoria Barrett's Github Pages Site
+# email: vbarrett289@gmail.com
+description: >
+  Welcome, here you will find an index of my talks, publications, and thesis.
 theme: jekyll-theme-minimal
