--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Victoria Barrett's Github Pages Site
-# email: vbarrett289@gmail.com
+title: Dr Victoria Barrett's Github Pages Site
+email:  Victoria.barrett@inria.fr
 description: >
-  Welcome, here you will find an index of my talks, publications, and thesis.
+  Welcome, here you will find my publications and my thesis.
 theme: jekyll-theme-minimal
