--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Dr Victoria Barrett's Github Pages Site
+title: Victoria Barrett's Github Pages Site
 email:  Victoria.barrett@inria.fr
 description: >
   Welcome, here you will find my publications and my thesis.
