Added email and LICS paper

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Victoria Barrett's Github Pages Site
-email:  Victoria.barrett@inria.fr
+title: Victoria Barrett
+institution: INRIA Saclay
+email:  Victoria.Barrett@inria.fr
 description: >
   Welcome, here you will find my publications and my thesis.
 theme: jekyll-theme-minimal
